changing repo name on github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://renzol2.github.io/renzomledesma",
+  "homepage": "http://renzol2.github.io/covid19ds",
   "name": "renzomledesma",
   "version": "0.1.0",
   "private": true,
