--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.5.1",
     "papaparse": "^5.2.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
